force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Additional_Field_Value_10__c.field-meta.xml
<CustomField>
    <fullName>Additional_Field_Value_10__c</fullName>
    <label>Additional Field Value 10</label>
    <length>50</length>
    <type>Text</type>
</CustomField>