force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Reference__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Reference__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__OptionType__c,&apos;Component&apos;),&apos;&apos;,
IF(




OR(SBQQ__Product__r.RecordType.DeveloperName = &apos;Bundle Set&apos;, ISBLANK(SBQQ__RequiredBy__c )),
Name,
IF( 
ISBLANK(SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__c),
IF(
ISBLANK(SBQQ__RequiredBy__r.SBQQ__RequiredBy__c ),
SBQQ__RequiredBy__r.Name,
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.Name
),
SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.SBQQ__RequiredBy__r.Name
)
)

+

IF( ISPICKVAL(Recurrence_Type__c,&apos;One-Time&apos;), &apos;OT&apos;, &apos;R&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Reference</label>
    <type>Text</type>
</CustomField>