force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Contracted_Price_Key__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Price_Key__c</fullName>
    <label>Contracted Price Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>