force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Contractor_ListPrice_Override__c.field-meta.xml
<CustomField>
    <fullName>Contractor_ListPrice_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor ListPrice Override</label>
    <type>Checkbox</type>
</CustomField>