force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Contractor_Price_Fixed_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Price_Fixed_Uplift__c</fullName>
    <label>Contractor Price Fixed Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>