force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Contractor_Price_Variable_Component__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Price_Variable_Component__c</fullName>
    <label>Contractor Price Variable Component</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>