force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Frequency_Factor__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Factor__c</fullName>
    <label>Frequency Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>