force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Fulfillment_Tier__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Tier__c</fullName>
    <label>Fulfillment Tier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>