force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Market_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Market_Coefficient__c</fullName>
    <label>Market Coefficient</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>