force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Market_Coefficient_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Coefficient_Type__c</fullName>
    <label>Market Coefficient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Coefficient</valueSetName>
    </valueSet>
</CustomField>