force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Item_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Item_Name_Number__c</fullName>
    <label>NS Item Name Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>