force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Item_Number__c</fullName>
    <label>NS Item Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>