force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Number_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Services__c</fullName>
    <label>Number of Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>