force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Optional_Product__c.field-meta.xml
<CustomField>
    <fullName>Optional_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>