force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OptionalProduct__c.field-meta.xml
<CustomField>
    <fullName>OptionalProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional Product</label>
    <type>Checkbox</type>
</CustomField>