force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <label>Payment Schedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>