force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Photo_URLs__c.field-meta.xml
<CustomField>
    <fullName>Photo_URLs__c</fullName>
    <description>This is to store the urls of the photos uploaded from scoping tool related the service being performed (quote line)</description>
    <label>Photo URLs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>