force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Fixed_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Price_Fixed_Uplift__c</fullName>
    <label>Price Fixed Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>