force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Variable_Component__c.field-meta.xml
<CustomField>
    <fullName>Price_Variable_Component__c</fullName>
    <label>Price Variable Component</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>