force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Type__c</fullName>
    <formula>SBQQ__Product__r.RecordType.Name</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>