force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Property_Metric__c.field-meta.xml
<CustomField>
    <fullName>Property_Metric__c</fullName>
    <label>Property Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Metrics</valueSetName>
    </valueSet>
</CustomField>