force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Recurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Type__c</fullName>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Recurrence_Type</valueSetName>
    </valueSet>
</CustomField>