force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Route_Optimized_Line__c.field-meta.xml
<CustomField>
    <fullName>Route_Optimized_Line__c</fullName>
    <formula>Route_Optimized__c &amp;&amp;  Route_Optimized_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Optimized Line</label>
    <type>Checkbox</type>
</CustomField>