force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Route_Optimized_Zip__c.field-meta.xml
<CustomField>
    <fullName>Route_Optimized_Zip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route Optimized (Zip)</label>
    <type>Checkbox</type>
</CustomField>