force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Special_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Special_Pricing_Type__c</fullName>
    <label>Special Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segmented</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>