force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Sq_Ft_Qty__c.field-meta.xml
<CustomField>
    <fullName>Sq_Ft_Qty__c</fullName>
    <label>Sq Ft/Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>