force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Take_Rate__c.field-meta.xml
<CustomField>
    <fullName>Take_Rate__c</fullName>
    <label>Take Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>