force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Take_Rate_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Take_Rate_Minimum__c</fullName>
    <label>Take Rate Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>